[gd_scene load_steps=39 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/visibility.png" type="Texture" id=2]
[ext_resource path="res://assets/attack_tile_2.png" type="Texture" id=3]
[ext_resource path="res://assets/meg_attack_tile.png" type="Texture" id=4]
[ext_resource path="res://assets/spawn_tile.png" type="Texture" id=5]
[ext_resource path="res://assets/meg_floor_attack.png" type="Texture" id=6]
[ext_resource path="res://Tileset.tres" type="TileSet" id=7]
[ext_resource path="res://TileCursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://pixelmix.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UIBar.gd" type="Script" id=11]
[ext_resource path="res://LabelFont.tres" type="DynamicFont" id=12]
[ext_resource path="res://runescape_uf.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/minimap.png" type="Texture" id=14]
[ext_resource path="res://Minimap.gd" type="Script" id=15]
[ext_resource path="res://BoonSelect.gd" type="Script" id=16]
[ext_resource path="res://small_pixel.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://BoonInfo.tscn" type="PackedScene" id=18]
[ext_resource path="res://Inventory.gd" type="Script" id=19]
[ext_resource path="res://assets/boon_highlight.png" type="Texture" id=20]
[ext_resource path="res://assets/inv_item_cursor.png" type="Texture" id=21]
[ext_resource path="res://PomMenu.gd" type="Script" id=22]
[ext_resource path="res://assets/boon_highlight_picked.png" type="Texture" id=23]
[ext_resource path="res://Dialog.tscn" type="PackedScene" id=24]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://Keepsakes.gd" type="Script" id=26]
[ext_resource path="res://Boons.gd" type="Script" id=27]

[sub_resource type="TileSet" id=1]
0/name = "visibility.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "visibility.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "attack_tile_2.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "meg_attack_tile.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "spawn_tile.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "meg_floor_attack.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 1
font_data = ExtResource( 13 )

[sub_resource type="TileSet" id=6]
0/name = "wall 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 2, 2 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "player 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 2, 0, 2, 2 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "minimap.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 4, 0, 2, 2 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "minimap.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 6, 0, 2, 2 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 25 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="VisibilityMap" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1

[node name="IndicatorMap" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1

[node name="PlayerIndicators" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 65536, 1, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 1, 0, 131072, 1, 0, 131073, 12, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 1, 0, 196608, 1, 0, 196609, 12, 0, 196610, 0, 0, 196611, 5, 0, 196612, 10, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 6, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 1, 0, 262144, 1, 0, 262145, 12, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 1, 0, 327680, 1, 0, 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 11, 196609, 327691, 11, 196610, 327692, 11, 196610, 327693, 11, 196611, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 393216, 1, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, 393222, 4, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 393232, 5, 0, 393233, 5, 0, 393234, 1, 0, 458752, 1, 0, 458753, 9, 0, 458754, 12, 0, 458755, 12, 0, 458756, 12, 0, 458757, 12, 0, 458758, 1, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 1, 0, 524288, 1, 0, 524289, 9, 0, 524290, 12, 0, 524291, 12, 0, 524292, 12, 0, 524293, 12, 0, 524294, 1, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 1, 0, 589824, 1, 0, 589825, 9, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 1, 0, 589831, 5, 0, 589832, 11, 196608, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 786433, 5, 0, 786434, 5, 0 )

[node name="TutorialMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 65536, 1, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 1, 0, 65549, 1, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 1, 0, 65561, 1, 0, 65562, 5, 0, 65563, 5, 0, 65564, 5, 0, 65565, 11, 0, 65566, 5, 0, 65567, 5, 0, 65568, 5, 0, 65569, 5, 0, 65570, 5, 0, 65571, 5, 0, 65572, 5, 0, 65573, 5, 0, 65574, 5, 0, 65575, 1, 0, 65576, 1, 0, 65577, 5, 0, 65578, 5, 0, 65579, 5, 0, 65580, 5, 0, 65581, 5, 0, 65582, 5, 0, 65583, 5, 0, 65584, 5, 0, 65585, 5, 0, 65586, 5, 0, 65587, 5, 0, 65588, 1, 0, 65589, 1, 0, 65590, 5, 0, 65591, 5, 0, 65592, 5, 0, 65593, 5, 0, 65594, 5, 0, 65595, 5, 0, 65596, 5, 0, 65597, 5, 0, 65598, 5, 0, 65599, 5, 0, 65600, 5, 0, 65601, 5, 0, 65602, 1, 0, 131072, 1, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 1, 0, 131085, 1, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 1, 0, 131097, 1, 0, 131098, 5, 0, 131099, 5, 0, 131100, 5, 0, 131101, 11, 65536, 131102, 5, 0, 131103, 5, 0, 131104, 5, 0, 131105, 5, 0, 131106, 5, 0, 131107, 5, 0, 131108, 5, 0, 131109, 5, 0, 131110, 5, 0, 131111, 1, 0, 131112, 1, 0, 131113, 5, 0, 131114, 5, 0, 131115, 5, 0, 131116, 5, 0, 131117, 5, 0, 131118, 5, 0, 131119, 5, 0, 131120, 5, 0, 131121, 5, 0, 131122, 5, 0, 131123, 5, 0, 131124, 1, 0, 131125, 1, 0, 131126, 5, 0, 131127, 5, 0, 131128, 5, 0, 131129, 5, 0, 131130, 5, 0, 131131, 5, 0, 131132, 5, 0, 131133, 2, 0, 131134, 5, 0, 131135, 5, 0, 131136, 5, 0, 131137, 5, 0, 131138, 1, 0, 131139, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 0, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 15, 0, 196621, 4, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 12, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 15, 0, 196633, 4, 0, 196634, 5, 0, 196635, 12, 0, 196636, 5, 0, 196637, 11, 65536, 196638, 5, 0, 196639, 5, 0, 196640, 5, 0, 196641, 5, 0, 196642, 5, 0, 196643, 5, 0, 196644, 12, 0, 196645, 5, 0, 196646, 5, 0, 196647, 15, 0, 196648, 4, 0, 196649, 5, 0, 196650, 5, 0, 196651, 5, 0, 196652, 5, 0, 196653, 5, 0, 196654, 5, 0, 196655, 5, 0, 196656, 5, 0, 196657, 5, 0, 196658, 5, 0, 196659, 5, 0, 196660, 15, 0, 196661, 4, 0, 196662, 5, 0, 196663, 5, 0, 196664, 3, 0, 196665, 5, 0, 196666, 5, 0, 196667, 5, 0, 196668, 5, 0, 196669, 5, 0, 196670, 5, 0, 196671, 5, 0, 196672, 5, 0, 196673, 5, 0, 196674, 6, 0, 196675, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 1, 0, 262157, 1, 0, 262158, 5, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 1, 0, 262169, 1, 0, 262170, 5, 0, 262171, 5, 0, 262172, 5, 0, 262173, 11, 65536, 262174, 5, 0, 262175, 5, 0, 262176, 5, 0, 262177, 5, 0, 262178, 5, 0, 262179, 5, 0, 262180, 5, 0, 262181, 5, 0, 262182, 5, 0, 262183, 1, 0, 262184, 1, 0, 262185, 5, 0, 262186, 5, 0, 262187, 5, 0, 262188, 5, 0, 262189, 5, 0, 262190, 5, 0, 262191, 5, 0, 262192, 5, 0, 262193, 5, 0, 262194, 5, 0, 262195, 5, 0, 262196, 1, 0, 262197, 1, 0, 262198, 5, 0, 262199, 5, 0, 262200, 5, 0, 262201, 5, 0, 262202, 5, 0, 262203, 5, 0, 262204, 5, 0, 262205, 2, 0, 262206, 5, 0, 262207, 5, 0, 262208, 5, 0, 262209, 5, 0, 262210, 1, 0, 262211, 1, 0, 327680, 1, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 1, 0, 327693, 1, 0, 327694, 5, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327704, 1, 0, 327705, 1, 0, 327706, 5, 0, 327707, 5, 0, 327708, 5, 0, 327709, 11, 131072, 327710, 5, 0, 327711, 5, 0, 327712, 5, 0, 327713, 5, 0, 327714, 5, 0, 327715, 5, 0, 327716, 5, 0, 327717, 5, 0, 327718, 5, 0, 327719, 1, 0, 327720, 1, 0, 327721, 5, 0, 327722, 5, 0, 327723, 5, 0, 327724, 5, 0, 327725, 5, 0, 327726, 5, 0, 327727, 5, 0, 327728, 5, 0, 327729, 5, 0, 327730, 5, 0, 327731, 5, 0, 327732, 1, 0, 327733, 1, 0, 327734, 5, 0, 327735, 5, 0, 327736, 5, 0, 327737, 5, 0, 327738, 5, 0, 327739, 5, 0, 327740, 5, 0, 327741, 5, 0, 327742, 5, 0, 327743, 5, 0, 327744, 5, 0, 327745, 5, 0, 327746, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 1, 0, 393262, 1, 0, 393263, 1, 0, 393264, 1, 0, 393265, 1, 0, 393266, 1, 0, 393267, 1, 0, 393268, 1, 0, 393269, 1, 0, 393270, 1, 0, 393271, 1, 0, 393272, 1, 0, 393273, 1, 0, 393274, 1, 0, 393275, 1, 0, 393276, 1, 0, 393277, 1, 0, 393278, 1, 0, 393279, 1, 0, 393280, 1, 0, 393281, 1, 0, 393282, 1, 0, 524290, 5, 0, 524294, 5, 0, 524302, 5, 0, 655365, 5, 0, 786433, 5, 0, 786434, 5, 0 )

[node name="TileCursor" parent="." instance=ExtResource( 8 )]

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 32, 48 )

[node name="Instructions" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -192, 10 )
z_index = 2

[node name="I1" type="Label" parent="Instructions"]
margin_left = 192.0
margin_top = -42.0
margin_right = 304.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "WASD/ or arrow keys to move and attack"
autowrap = true

[node name="I11" type="Label" parent="Instructions"]
margin_left = 48.0
margin_top = 22.0
margin_right = 176.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "(ESC to skip tutorial)"
autowrap = true

[node name="I2" type="Label" parent="Instructions"]
margin_left = 192.0
margin_top = 102.0
margin_right = 347.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Mouse hover over objects of interest to see info"
autowrap = true

[node name="I3" type="Label" parent="Instructions"]
margin_left = 432.0
margin_top = -74.0
margin_right = 587.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 3 )
text = "Use 1-5 keys to select a boon, attack to use it

Boons cost blood to use Blood regenerates"
autowrap = true

[node name="I4" type="Label" parent="Instructions"]
margin_left = 432.0
margin_top = 102.0
margin_right = 587.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Boons are depleted when used"
autowrap = true

[node name="I6" type="Label" parent="Instructions"]
margin_left = 688.0
margin_top = 102.0
margin_right = 843.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "SPACE to activate area-of-effect or self-effect boons"
autowrap = true

[node name="I7" type="Label" parent="Instructions"]
margin_left = 608.0
margin_top = -58.0
margin_right = 763.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 3 )
text = "You can dash over obstacles with dash boons"
autowrap = true

[node name="I5" type="Label" parent="Instructions"]
margin_left = 880.0
margin_top = 102.0
margin_right = 1035.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 80, 20.5 )
custom_fonts/font = SubResource( 3 )
text = "Once all your boons are depleted, use Regain Favor to shuffle them back to your draw deck"
autowrap = true

[node name="I8" type="Label" parent="Instructions"]
margin_left = 880.0
margin_top = -58.0
margin_right = 1035.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 3 )
text = "Once your hand is empty, R to draw a new hand

T to wait a turn"
autowrap = true

[node name="I10" type="Label" parent="Instructions"]
margin_left = 1088.0
margin_top = -58.0
margin_right = 1243.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 3 )
text = "Get more boons from Olympians"
autowrap = true

[node name="I9" type="Label" parent="Instructions"]
margin_left = 1088.0
margin_top = 102.0
margin_right = 1243.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "V to view your full deck"
autowrap = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIBar" type="ColorRect" parent="UI"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )
script = ExtResource( 11 )

[node name="Armor" type="Label" parent="UI/UIBar"]
margin_left = 224.0
margin_top = 16.0
margin_right = 290.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 12 )
text = "Armor:"

[node name="HP" type="Label" parent="UI/UIBar"]
margin_left = 224.0
margin_top = 40.0
margin_right = 265.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 12 )
text = "HP:"

[node name="HPBar" type="ColorRect" parent="UI/UIBar"]
margin_left = 16.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 56.0
color = Color( 0.870588, 0, 0, 1 )

[node name="Mana" type="Label" parent="UI/UIBar"]
margin_left = 224.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 12 )
text = "Blood:"

[node name="ManaBar" type="ColorRect" parent="UI/UIBar"]
margin_left = 16.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 80.0
color = Color( 1, 0.83, 0, 1 )

[node name="Info" type="Label" parent="UI/UIBar"]
margin_left = 800.0
margin_right = 948.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Obols:"

[node name="Keepsakes" type="Node2D" parent="UI/UIBar"]
position = Vector2( 810, 36 )

[node name="Right" type="ColorRect" parent="UI"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -224.0
margin_bottom = -88.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )

[node name="Info" type="RichTextLabel" parent="UI/Right"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 510.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true

[node name="Minimap" type="TileMap" parent="UI"]
position = Vector2( 810, 410 )
tile_set = SubResource( 6 )
cell_size = Vector2( 2, 2 )
cell_quadrant_size = 1
format = 1
script = ExtResource( 15 )

[node name="BoonSelect" type="ColorRect" parent="UI"]
editor/display_folded = true
visible = false
margin_right = 800.0
margin_bottom = 512.0
script = ExtResource( 16 )

[node name="BoonSelect" type="ColorRect" parent="UI/BoonSelect"]
margin_left = 4.0
margin_top = 4.0
margin_right = 796.0
margin_bottom = 508.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="UI/BoonSelect/BoonSelect"]
margin_left = 204.0
margin_top = 18.0
margin_right = 628.0
margin_bottom = 50.0
grow_horizontal = 2
custom_fonts/font = SubResource( 7 )
text = "ARTEMIS offers a boon"

[node name="BoonInfo" parent="UI/BoonSelect/BoonSelect" instance=ExtResource( 18 )]
margin_left = 124.0
margin_top = 102.0
margin_right = 152.0
margin_bottom = 134.0

[node name="BoonInfo2" parent="UI/BoonSelect/BoonSelect" instance=ExtResource( 18 )]
margin_left = 380.0
margin_top = 102.0
margin_right = 408.0
margin_bottom = 134.0

[node name="BoonInfo3" parent="UI/BoonSelect/BoonSelect" instance=ExtResource( 18 )]
margin_left = 636.0
margin_top = 102.0
margin_right = 664.0
margin_bottom = 134.0

[node name="RejectKey" type="Label" parent="UI/BoonSelect/BoonSelect"]
margin_left = 44.0
margin_top = 460.0
margin_right = 460.0
margin_bottom = 492.0
custom_fonts/font = SubResource( 8 )
text = "4 :  reject all"
autowrap = true

[node name="Inventory" type="ColorRect" parent="UI"]
editor/display_folded = true
visible = false
light_mask = 0
margin_left = 32.0
margin_top = 22.0
margin_right = 768.0
margin_bottom = 480.0
mouse_filter = 2
script = ExtResource( 19 )

[node name="Inventory" type="ColorRect" parent="UI/Inventory"]
margin_left = 4.0
margin_top = 4.0
margin_right = 732.0
margin_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Highlight" type="Sprite" parent="UI/Inventory/Inventory"]
position = Vector2( -200, 0 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 20 )
centered = false

[node name="ItemHighlight" type="Sprite" parent="UI/Inventory/Inventory"]
position = Vector2( -200, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 21 )
centered = false

[node name="Label" type="Label" parent="UI/Inventory/Inventory"]
margin_left = 28.0
margin_top = 14.0
margin_right = 198.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 12 )
text = "Available:"

[node name="Label2" type="Label" parent="UI/Inventory/Inventory"]
margin_left = 28.0
margin_top = 230.0
margin_right = 198.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 12 )
text = "Depleted:"

[node name="Label3" type="Label" parent="UI/Inventory/Inventory"]
margin_left = 28.0
margin_top = 406.0
margin_right = 198.0
margin_bottom = 422.0
custom_fonts/font = ExtResource( 12 )
text = "Keepsakes:"

[node name="PomMenu" type="ColorRect" parent="UI"]
visible = false
light_mask = 0
margin_left = 32.0
margin_top = 22.0
margin_right = 768.0
margin_bottom = 480.0
mouse_filter = 2
script = ExtResource( 22 )

[node name="PomMenu" type="ColorRect" parent="UI/PomMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 732.0
margin_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="UI/PomMenu/PomMenu"]
margin_left = 220.0
margin_top = 6.0
margin_right = 500.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 9 )
text = "Pom of Power"

[node name="Label2" type="Label" parent="UI/PomMenu/PomMenu"]
margin_left = 20.0
margin_top = 54.0
margin_right = 300.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 10 )
text = "Upgradable:"

[node name="Label3" type="Label" parent="UI/PomMenu/PomMenu"]
margin_left = 20.0
margin_top = 262.0
margin_right = 300.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 10 )
text = "Not upgradable:"

[node name="Button" type="Button" parent="UI/PomMenu/PomMenu"]
margin_left = 284.0
margin_top = 404.0
margin_right = 431.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 12 )
shortcut_in_tooltip = false
text = "Upgrade"

[node name="Highlight" type="Sprite" parent="UI/PomMenu/PomMenu"]
position = Vector2( -116, 102 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 20 )
centered = false

[node name="Picked" type="Sprite" parent="UI/PomMenu/PomMenu"]
position = Vector2( -196, 70 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 23 )
centered = false

[node name="Dialog" parent="UI" instance=ExtResource( 24 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -184.0
margin_right = -224.0
margin_bottom = -88.0

[node name="FadeInScreen" type="ColorRect" parent="UI"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="UI/FadeInScreen"]
margin_left = 320.0
margin_top = 176.0
margin_right = 772.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 11 )
text = "TARTARUS - LEVEL 1"

[node name="Tween" type="Tween" parent="UI/FadeInScreen"]

[node name="Keepsakes" type="Node" parent="."]
script = ExtResource( 26 )

[node name="Boons" type="Node" parent="."]
script = ExtResource( 27 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="pressed" from="UI/PomMenu/PomMenu/Button" to="UI/PomMenu" method="_on_Button_pressed"]
